--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>frontend</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+</head>
+<body>
+    Hello World
+</body>
+</html>
