--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,20 @@
 <html>
 <head>
     <title>frontend</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <meta charset='utf-8'>
+    <link rel='stylesheet' type='text/css' href='./styles/reset.css'>
+    <link rel='stylesheet' type='text/css' href='./styles/main.css'>
 </head>
 <body>
-    Hello World
+    <div class='expositor'>
+        <div class='expositor__organ expositor__organ--first'></div>
+        <div class='expositor__organ expositor__organ--second'></div>
+        <div class='expositor__organ expositor__organ--third'></div>
+    </div>
+    <div class='expositor'>
+        <div class='expositor__organ expositor__organ--fourth'></div>
+        <div class='expositor__organ expositor__organ--fifth'></div>
+        <div class='expositor__organ expositor__organ--sixth'></div>
+    </div>
 </body>
 </html>
