Use responsive css strategy

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,9 @@
         <div class='expositor__organ expositor__organ--first'></div>
         <div class='expositor__organ expositor__organ--second'></div>
         <div class='expositor__organ expositor__organ--third'></div>
-    </div>
-    <div class='expositor'>
-        <div class='expositor__organ expositor__organ--fourth'></div>
-        <div class='expositor__organ expositor__organ--fifth'></div>
-        <div class='expositor__organ expositor__organ--sixth'></div>
+        <div class='expositor__organ expositor__organ--first'></div>
+        <div class='expositor__organ expositor__organ--first'></div>
+        <div class='expositor__organ expositor__organ--first'></div>
     </div>
 </body>
 </html>
