Change collapse width

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class='expositor'>
-        <div class='expositor__organ expositor__organ--first'></div>
-        <div class='expositor__organ expositor__organ--second'></div>
-        <div class='expositor__organ expositor__organ--third'></div>
-        <div class='expositor__organ expositor__organ--first'></div>
-        <div class='expositor__organ expositor__organ--first'></div>
-        <div class='expositor__organ expositor__organ--first'></div>
+        <div class='expositor__module expositor__module--first'></div>
+        <div class='expositor__module expositor__module--second'></div>
+        <div class='expositor__module expositor__module--third'></div>
+        <div class='expositor__module expositor__module--first'></div>
+        <div class='expositor__module expositor__module--first'></div>
+        <div class='expositor__module expositor__module--first'></div>
     </div>
 </body>
 </html>
