--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,17 @@
     <link rel='stylesheet' type='text/css' href='./styles/main.css'>
 </head>
 <body>
-    <div class='expositor'>
-        <div class='expositor__module expositor__module--first'></div>
-        <div class='expositor__module expositor__module--second'></div>
-        <div class='expositor__module expositor__module--third'></div>
-        <div class='expositor__module expositor__module--first'></div>
-        <div class='expositor__module expositor__module--first'></div>
-        <div class='expositor__module expositor__module--first'></div>
+    <div class="wrapper">
+        <section class="header">
+        </section>
+        <section class='expositor'>
+            <div class='expositor__module expositor__module--first'></div>
+            <div class='expositor__module expositor__module--second'></div>
+            <div class='expositor__module expositor__module--third'></div>
+            <div class='expositor__module expositor__module--first'></div>
+            <div class='expositor__module expositor__module--first'></div>
+            <div class='expositor__module expositor__module--first'></div>
+        </section>
     </div>
 </body>
 </html>
