--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <link rel='stylesheet' type='text/css' href='./styles/main.css'>
 </head>
 <body>
-    <div class="wrapper">
-        <section class="header">
+    <div class='wrapper'>
+        <section class='header'>
+            <div class='header__logo'></div>
+            <div class='header__menu'></div>
         </section>
         <section class='expositor'>
             <div class='expositor__module expositor__module--first'></div>
