--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,22 @@
 <html>
 <head>
     <title>frontend</title>
-    <meta charset='utf-8'>
-    <link rel='stylesheet' type='text/css' href='./styles/reset.css'>
-    <link rel='stylesheet' type='text/css' href='./styles/main.css'>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
 </head>
 <body>
-    <div class='wrapper'>
-        <section class='header'>
-            <div class='header__logo'></div>
-            <div class='header__menu'></div>
-        </section>
-        <section class='expositor'>
-            <div class='expositor__module expositor__module--first'></div>
-            <div class='expositor__module expositor__module--second'></div>
-            <div class='expositor__module expositor__module--third'></div>
-            <div class='expositor__module expositor__module--first'></div>
-            <div class='expositor__module expositor__module--first'></div>
-            <div class='expositor__module expositor__module--first'></div>
-        </section>
-    </div>
+    <section class="header">
+        <div class="header__logo"></div>
+        <div class="header__menu"></div>
+    </section>
+    <section class="expositor">
+        <div class="expositor__module expositor__module--first"></div>
+        <div class="expositor__module expositor__module--second"></div>
+        <div class="expositor__module expositor__module--third"></div>
+        <div class="expositor__module expositor__module--first"></div>
+        <div class="expositor__module expositor__module--first"></div>
+        <div class="expositor__module expositor__module--first"></div>
+    </section>
 </body>
 </html>
