Repair expositor rule

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,7 @@
         <div class="expositor__module expositor__module--first"></div>
         <div class="expositor__module expositor__module--first"></div>
     </section>
+    <section class="footer">
+    </section>
 </body>
 </html>
