--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./styles/reset.css">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <link rel="shortcut icon" href="./images/test_favicon.png">
 </head>
 <body>
     <section class="header">
