--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
 <body>
     <section class="header">
         <div class="header__logo"></div>
-        <div class="header__menu"></div>
+        <div class="header__menu">
+            <a>Portafolio</a>
+            <a>Contacto</a>
+        </div>
     </section>
     <section class="expositor">
         <div class="expositor__module expositor__module--first"></div>
