--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./styles/reset.css">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <link rel="stylesheet" type="text/css" href="./styles/parallax.css">
     <link rel="shortcut icon" href="./images/test_favicon.png">
 </head>
 <body>
@@ -15,6 +16,8 @@
             <a>Contacto</a>
         </div>
     </section>
+    <section class="parallax-dictor"></section>
+    <section class="separator"></section>
     <section class="expositor">
         <div class="expositor__module expositor__module--first"></div>
         <div class="expositor__module expositor__module--second"></div>
@@ -23,6 +26,10 @@
         <div class="expositor__module expositor__module--first"></div>
         <div class="expositor__module expositor__module--first"></div>
     </section>
+    <section class="separator"></section>
+    <section class="parallax-dictor--middle"></section>
+    <section class="separator"></section>
+    <section class="parallax-dictor--last"></section>
     <section class="footer">
     </section>
 </body>
