--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <a>Contacto</a>
         </div>
     </section>
-    <section class="parallax-dictor"></section>
+    <section class="base-parallax parallax--first"></section>
     <section class="separator"></section>
     <section class="expositor">
         <div class="expositor__module expositor__module--first"></div>
@@ -27,9 +27,14 @@
         <div class="expositor__module expositor__module--first"></div>
     </section>
     <section class="separator"></section>
-    <section class="parallax-dictor--middle"></section>
-    <section class="separator"></section>
-    <section class="parallax-dictor--last"></section>
+    <section class="base-parallax parallax--second"></section>
+    <section class="about">
+        <div class="about__text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem I
+        </div>
+    </section>
+    <section class="mobile-separator"></section>
+    <section class="base-parallax parallax--third"></section>
     <section class="footer">
     </section>
 </body>
